# Zappy-Server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: test_compilation.yml
entries/: entries.h  init_log_entry.c  init_memory_entry.c  init_rand_entry.c  init_sigint_entry.c  init_signals_entry.c
exits/: exits.h  smart_ptr_exit.c
include/: macro.h  types.h
src/: main.c
src/egg/: create_egg.c  egg.h  egg_functions.h  egg_internal.h  hatch_egg.c  spawn_eggs.c
src/elements/: density_table.c  elements.h  get_elements_str.c
src/graphical/: actions.c  find_player.c  graphical.h  graphical_broadcast.c  graphical_internal.h  parse_args.c
src/graphical/actions/: actions.h  bct.c  mct.c  msz.c  pin.c  plv.c  ppo.c  sgt.c  sst.c  tna.c
src/graphical/broadcast_actions/: bct.c  ebo.c  edi.c  enw.c  pbc.c  pdi.c  pdr.c  pfk.c  pgt.c  pic.c  pie.c  pin.c  plv.c  pnw.c  ppo.c  seg.c  smg.c
src/map/: compute_density.c  compute_position.c  density_table.c  generate_map.c  map.h  map_internal.h
src/parse_args/: get_val_from_str.c  handle_c_flag.c  handle_f_flag.c  handle_n_flag.c  handle_p_flag.c  handle_x_flag.c  handle_y_flag.c  parse_args.c  parse_args.h  parse_args_internal.h
src/players/: actions.c  actions_arr.h  actions_time.c  parse_buf.c  player_actions.h  player_functions.h  players.h  pos_list.c  pos_list.h  pos_list_internal.h
src/players/actions/: actions.h  broadcast.c  connect_nbr.c  eject.c  fork.c  forward.c  incantation.c  incentation.c  inventory.c  left.c  look.c  right.c  set.c  take.c
src/server/: accept_clients.c  close_socket.c  connect_client.c  connect_graphic.c  disconnect_client.c  handle_sigint.c  handle_signals.c  init_server_socket.c  recieve.c  recv.c  run_server.c  send_clients.c  server.h  server_internal.h  server_version.h  signals_handling.h  zap_srv_socket.h  zap_srv_t.h
src/string/: message_entry_table.c  message_entry_table.h  string_entry_table.c  string_entry_table.h
src/teams/: create_teams.c  teams.h  teams_internal.h
src/utils/: generate_shuffled_positions.c  is_valid_char.c  utils.h
